--- a/API/fastapi-orders-inventory/requirements.txt
+++ b/API/fastapi-orders-inventory/requirements.txt
@@ -2,7 +2,8 @@ fastapi==0.111.0
 uvicorn[standard]==0.30.1
 sqlmodel==0.0.21
 SQLAlchemy==2.0.30
-pydantic-settings==2.4.0
-requests==2.32.3
+pydantic-settings==2.10.1
+requests==2.32.5
 pytest==8.2.0
 typing-extensions==4.12.2
+locust
